changed bg image,  fixed spacing on Projects page

--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -29,8 +29,9 @@
     }
 
     .project-card {
-        width: 25em;
+        width: 30em;
         height: 35em;
+        margin-top: 4em;
         background: linear-gradient(var(--light-bg-color), var(--dark-bg-color));
         grid-row: 2;
         grid-column: 1/4;
@@ -46,13 +47,13 @@
 
     .project-card>h2 {
         border-bottom: 1px solid var(--light-bg-color);
-        font-size: 2em
+        font-size: 2.2em
     }
 
     .project-card>p {
         border-top: 1px solid var(--light-bg-color);
         text-align: center;
-        font-size: 1em;
+        font-size: 1.1em;
         grid-row: 3;
         padding-left: 1em;
         padding-right: 1em
@@ -88,8 +89,8 @@
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        width: 23em;
-        height: 23em;
+        width: 29em;
+        height: 22em;
     }
 
     .project-image-robofriends {
@@ -97,8 +98,8 @@
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        width: 23em;
-        height: 23em;
+        width: 29em;
+        height: 22em;
     }
 
     .project-image-mars {
@@ -106,8 +107,8 @@
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        width: 23em;
-        height: 23em;
+        width: 29em;
+        height: 22em;
     }
 
 
